KSAP-1917 Fix the alignment and formatting of the credits in the planner cells.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-ap/trunk@75294 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-ap-web/src/main/webapp/themes/ksapboot/stylesheets/ksap.planner.less
+++ b/ks-ap-web/src/main/webapp/themes/ksapboot/stylesheets/ksap.planner.less
@@ -245,8 +245,7 @@
 }
 
 .ksap-carousel-list ul li .ksap-carousel-term .uif-collectionItem .credit {
-  color: #888;
-  margin-left: 5px;
+  float: right;
 }
 
 .ksap-carousel-list ul li .ksap-carousel-term .uif-collectionItem .grade {
@@ -462,15 +461,6 @@ label.scheduled {
   text-align: center !important;
 }
 
-
-.ksap-planner-cell-CreditCount p::before {
-  content: '(' !important;
-}
-
-.ksap-planner-cell-CreditCount p::after {
-  content: ')' !important;
-}
-
 .ks-plan-Popover-body {
   margin: 0 !important;
 }
@@ -479,10 +469,6 @@ label.scheduled {
   display: block !important;
   width: 280px !important;
 }
-
-
-
-
 
 .ks-plan-Loader {
   margin-right: 10px !important;
